# functionable-calculator

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  shared-debug.keystore
app/src/androidTest/java/edu/singaporetech/inf2007quiz01/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fibonacci.cpp  gpu_compute.cpp
app/src/main/java/edu/singaporetech/inf2007quiz01/: FunctionMap.kt  GpuBridge.kt  Inf2007App.kt  MainActivity.kt  NativeFibonacci.kt  RustBridge.kt
app/src/main/java/edu/singaporetech/inf2007quiz01/audio/: ResultSonificationEngine.kt
app/src/main/java/edu/singaporetech/inf2007quiz01/consensus/: FibonacciConsensusEngine.kt
app/src/main/java/edu/singaporetech/inf2007quiz01/data/: AppDatabase.kt  ExpressionHistory.kt  ExpressionHistoryDao.kt  MathJsApi.kt  PreferencesManager.kt
app/src/main/java/edu/singaporetech/inf2007quiz01/di/: AppModule.kt  OperatorModule.kt
app/src/main/java/edu/singaporetech/inf2007quiz01/navigation/: NavRoutes.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/.cargo/: config.toml
app/src/main/rust/src/: arithmetic.rs  blockchain.rs  fibonacci.rs  genetic.rs  lambda.rs  lib.rs  monte_carlo.rs  pq_crypto.rs  raytracer.rs  wasm_fibonacci.rs  zkp.rs
app/src/test/java/edu/singaporetech/inf2007quiz01/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
test/: Readme.txt  a4.apk  a5.apk  a6.apk  a7.apk  app-debug-androidTest.apk  test.bat  test.sh
(+14 files in other folders)
